src/main/scala/nl/zolotko/intellij/unison/language/unison.bnf
{
  parserClass="nl.zolotko.intellij.unison.language.parser.UnisonParser"
  parserUtilClass="nl.zolotko.intellij.unison.language.parser.UnisonParserUtil"

  extends="com.intellij.extapi.psi.ASTWrapperPsiElement"
//  implements='nl.zolotko.intellij.unison.language.psi.ext.UnisonElement'
//  extends='nl.zolotko.intellij.unison.language.psi.ext.UnisonElementImpl'

  psiClassPrefix="Unison"
  psiImplClassSuffix="Impl"
  psiPackage="nl.zolotko.intellij.unison.language.psi"
  psiImplPackage="nl.zolotko.intellij.unison.language.psi.impl"
  psiImplUtilClass="nl.zolotko.intellij.unison.language.psi.impl.UnisonPsiImplUtil"

  elementTypeHolderClass="nl.zolotko.intellij.unison.language.psi.UnisonElementTypes"
  elementTypeClass="nl.zolotko.intellij.unison.language.psi.UnisonElementType"
  tokenTypeClass="nl.zolotko.intellij.unison.language.psi.UnisonTokenType"
}

File ::= Imports

Imports ::= Import*

Import ::= use ImportPrefix ImportSuffix*

ImportPrefix ::= (ImportWordyId | ImportDotId) | ImportSymbolyId

ImportSuffix ::= ImportWordyId | ImportSymbolyId

ImportWordyId ::= wordy

ImportSymbolyId ::= symboly

ImportDotId ::= dot
